<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nyc.c4q.maxrosado.finalexampracticalportion.LogInActivity">

    <EditText
        android:id="@+id/username_et"
        android:hint="@string/username_edit_text"
        android:inputType="textVisiblePassword"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/username_edit_text_top_margin"/>

    <EditText
        android:id="@+id/password_et"
        android:hint="@string/password_edit_text"
        android:inputType="textVisiblePassword"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_et"
        android:layout_marginTop="@dimen/password_edit_text_top_margin"/>

    <Button
        android:id="@+id/submit_button"
        android:text="@string/submit_button"
        android:onClick="setSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_et"
        android:layout_marginTop="@dimen/submit_button_top_margin"/>
</RelativeLayout>
