<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="nyc.c4q.maxrosado.finalexampracticalportion.ProfileScreenActivity">

        <ImageView
            android:id="@+id/profile_image_button_layout"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/profile_image_margin_bottom"
            android:src="@drawable/blank_profile_picture" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image_button_layout"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/profile_image_button_and_tv_margin"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/hardware_activity_button"
                    android:layout_width="@dimen/profile_image_button_dimension"
                    android:layout_height="@dimen/profile_image_button_dimension"
                    android:onClick="setHeartButton"
                    android:scaleType="fitXY"
                    android:src="@drawable/heart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/heart_button_tv" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/profile_image_button_and_tv_margin"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/gallery_activity_button"
                    android:layout_width="@dimen/profile_image_button_dimension"
                    android:layout_height="@dimen/profile_image_button_dimension"
                    android:onClick="setMessageButton"
                    android:scaleType="fitXY"
                    android:src="@drawable/message" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/message_button_tv" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/profile_image_button_and_tv_margin"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/settings_activity_button"
                    android:layout_width="@dimen/profile_image_button_dimension"
                    android:layout_height="@dimen/profile_image_button_dimension"
                    android:onClick="setSettingsButton"
                    android:scaleType="fitXY"
                    android:src="@drawable/wrench" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/settings_button_tv" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/profile_image_button_and_tv_margin"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/logout_activity_button"
                    android:layout_width="@dimen/profile_image_button_dimension"
                    android:layout_height="@dimen/profile_image_button_dimension"
                    android:onClick="setLogOffButton"
                    android:scaleType="fitXY"
                    android:src="@drawable/close_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/log_out_button_tv" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/profile_nav_drawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/profile_nav_top_image"
        android:background="#FFF5F500"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"/>
</android.support.v4.widget.DrawerLayout>
